--- a/pages/login.html
+++ b/pages/login.html
@@ -53,7 +53,9 @@
     </div>
     
     <div class="right">
-      
+      <div class="content-block">
+        <h1>Bem-vindo ao HireUP.</h1>
+      </div>
     </div>
 
   </div>
