--- a/pages/browse.html
+++ b/pages/browse.html
@@ -34,5 +34,20 @@
         <button>Search</button>
       </form>
     </section>
+    <section class="listar-jobs">
+        <div class="background-listar-jobs">
+          <div>
+            <div>
+              <p><span></span>Filter Jobs</p>
+            </div>
+            <div>
+              
+            </div>
+          </div>
+          <div>
+
+          </div>
+        </div>
+    </section>
   </body>
 </html>
