--- a/pages/login.html
+++ b/pages/login.html
@@ -18,7 +18,7 @@
 
     <div class="nav-middle">
       <nav class="nav-menu">
-        <a href="#" class="nav-link">Home</a>
+        <a href="../index.html" class="nav-link">Home</a>
         <a href="#" class="nav-link">Company</a>
         <a href="#" class="nav-link">Browse</a>
         <a href="#" class="nav-link">Blog</a>
