--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<div class="search">
 					<form action="">
 						<i class="fa-solid fa-magnifying-glass"></i>
-						<input type="search" name="" id="" />
+						<input type="search" name="" id="" placeholder="Search..." />
 						<button>Search</button>
 					</form>
 				</div>
