--- a/pages/login.html
+++ b/pages/login.html
@@ -28,7 +28,7 @@
 
     <div>
       <nav class="right-nav">
-        <a href="#" class="nav-link">Post a Job</a>
+        <a href="#" class="nav-link">Poste um Emprego</a>
       <button class="btn-primary">Log in</button>
       </nav>
       
@@ -49,6 +49,10 @@
           <input type="password" name="Password" id="password" maxlength="20" class="form-field w-input" placeholder="">
           <input type="submit" value="Login" data-wait="Por favor aguarde..." class="btn-primary w-button">
         </form>
+        <div class="form-footer">
+          <span class="text">Não tem uma conta?</span>
+          <a href="./signup.html">Faça o Sign Up</a>
+        </div>
       </div>
     </div>
     
