--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -16,7 +16,7 @@
         <div class="nav-middle">
           <nav class="nav-menu">
             <a href="#" class="nav-link">Home</a>
-            <a href="#" class="nav-link">Company</a>
+            <a href="#" class="nav-link">Empresas</a>
             <a href="#" class="nav-link">Browse</a>
             <a href="#" class="nav-link">Blog</a>
           </nav>
@@ -25,7 +25,7 @@
     
         <div>
           <nav class="right-nav">
-            <a href="#" class="nav-link">Post a Job</a>
+            <a href="#" class="nav-link">Poste um Emprego</a>
           <button class="btn-primary">Log in</button>
           </nav>
           
