--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			src="https://kit.fontawesome.com/1f168297b1.js"
 			crossorigin="anonymous"
 		></script>
-		<title>Document</title>
+		<title>HireUp - Home...</title>
 	</head>
 	<body>
 		<main>
@@ -38,13 +38,17 @@
 				</div>
 			</section>
 			<section class="right-side">
-				<figure>
-					<img
-						src="https://assets.website-files.com/63337525695d8ba70ab44222/6358b2bbb9fdec69f1b1c7a4_adam-rhodes-ep5lX958f7E-unsplash-p-2000.webp"
-						alt=""
-					/>
-					<figcaption>Partnership with Glassdoor and LinkedIn</figcaption>
-				</figure>
+				<div class="image-height">
+					<figure>
+						<img
+							src="https://assets.website-files.com/63337525695d8ba70ab44222/6358b2bbb9fdec69f1b1c7a4_adam-rhodes-ep5lX958f7E-unsplash-p-2000.webp"
+							alt=""
+						/>
+						<figcaption>
+							Partnership with Glassdoor and LinkedIn
+						</figcaption>
+					</figure>
+				</div>
 			</section>
 		</main>
 	</body>
