--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="./css/index.css" />
+		<link rel="stylesheet" href="./css/navbar.css" />
+		<link rel="shortcut icon" href="./img/logo.png" type="image/x-icon" />
 		<script
 			src="https://kit.fontawesome.com/1f168297b1.js"
 			crossorigin="anonymous"
@@ -12,6 +14,35 @@
 		<title>HireUp - Home...</title>
 	</head>
 	<body>
+		<header>
+			<div class="navbar">
+				<div class="left-nav">
+					<a href="#" class="brand"
+						><img
+							src="../img/logo.png"
+							alt="Logo"
+							class="logo"
+							height="30"
+					/></a>
+				</div>
+
+				<div class="nav-middle">
+					<nav class="nav-menu">
+						<a href="#" class="nav-link">Home</a>
+						<a href="#" class="nav-link">Empresas</a>
+						<a href="#" class="nav-link">Browse</a>
+						<a href="#" class="nav-link">Blog</a>
+					</nav>
+				</div>
+
+				<div>
+					<nav class="right-nav">
+						<a href="#" class="nav-link">Poste um Emprego</a>
+						<button class="btn-primary">Log in</button>
+					</nav>
+				</div>
+			</div>
+		</header>
 		<main>
 			<section class="left-side">
 				<div class="new">
