--- a/HireUP/web/pages/applyTo.html
+++ b/HireUP/web/pages/applyTo.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Apply - for job</title>
 	</head>
-	<body></body>
+	<body>
+		<header></header>
+		<main>
+			<section class="left-side"></section>
+			<section class="right-side"></section>
+		</main>
+	</body>
 </html>
