--- a/HireUP/web/pages/applyTo.html
+++ b/HireUP/web/pages/applyTo.html
@@ -4,12 +4,122 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<script
+			src="https://kit.fontawesome.com/1f168297b1.js"
+			crossorigin="anonymous"
+		></script>
 		<title>Apply - for job</title>
 	</head>
 	<body>
 		<header></header>
 		<main>
-			<section class="left-side"></section>
+			<section class="left-side">
+				<div class="icon">
+					<div class="image"></div>
+					<div class="image-title">
+						<p>Dribble</p>
+						<p>October 26, 2022</p>
+					</div>
+				</div>
+				<div class="location-info">
+					<h1>Front End Developer</h1>
+					<div class="location">
+						<p>
+							<span class="icon-location"
+								><i class="fa-solid fa-location-dot"></i
+							></span>
+							San Antonio
+						</p>
+						<p>
+							<span class="icon-dolar"
+								><i class="fa-solid fa-dollar-sign"></i
+							></span>
+							130k-160k
+						</p>
+					</div>
+				</div>
+				<div class="datails">
+					<div class="qualification">
+						<h1>Minimum Qualification</h1>
+					</div>
+					<div class="Preferred">
+						<h1>Preferred Qualification</h1>
+					</div>
+					<div class="about-job">
+						<h1>About the job</h1>
+					</div>
+					<div class="working">
+						<h1>Working at Dribble</h1>
+					</div>
+				</div>
+				<div class="personal-info">
+					<form action="">
+						<div class="pDetails">
+							<h1>1. Personal Details</h1>
+							<p>
+								We'll need these details in order to be able to contact
+								you.
+							</p>
+
+							<div>
+								<input
+									type="text"
+									name="firstName"
+									required
+									placeholder="First Name"
+								/>
+								<input
+									type="text"
+									name="lastName"
+									required
+									placeholder="Last Name"
+								/>
+								<input
+									type="email"
+									name="email"
+									required
+									placeholder="Your Email"
+								/>
+							</div>
+						</div>
+						<div class="pProfile">
+							<h1>2. Profile</h1>
+							<p>Let us know why you want to work with us!</p>
+
+							<div>
+								<textarea
+									name="1profileArea"
+									cols="30"
+									rows="10"
+									required
+									placeholder="Porque você quer trabalhar conosco?"
+								></textarea>
+								<textarea
+									name="2profileArea"
+									cols="30"
+									rows="10"
+									required
+									placeholder="Porque você é a pessoa certa para a vaga?"
+								></textarea>
+							</div>
+						</div>
+						<div class="sProfile">
+							<h1>Submit Application</h1>
+							<p>
+								In order to contact you with future jobs that you may be
+								interested in,we need to store your personal data.
+							</p>
+							<p>
+								If you are happy for us to do so please click the
+								checkbox below. You can view our GDPR / Privacy notice
+								here.
+							</p>
+						</div>
+
+						<input type="submit" name="inpSubmit" value="Aplicar" />
+					</form>
+				</div>
+			</section>
 			<section class="right-side"></section>
 		</main>
 	</body>
