--- a/HireUP/web/pages/applyTo.html
+++ b/HireUP/web/pages/applyTo.html
@@ -4,61 +4,57 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="shortcut icon" href="../img/logo.png" type="image/x-icon" />
+		<link rel="stylesheet" href="../css/apply.css" />
 		<script
 			src="https://kit.fontawesome.com/1f168297b1.js"
 			crossorigin="anonymous"
 		></script>
-		<title>Apply - for job</title>
+		<title>Aplicar - para trabalhar</title>
 	</head>
 	<body>
 		<header></header>
 		<main>
-			<section class="left-side">
-				<div class="icon">
-					<div class="image"></div>
-					<div class="image-title">
-						<p>Dribble</p>
-						<p>October 26, 2022</p>
+			<form action="">
+				<section class="left-side">
+					<div class="icon">
+						<div class="image"></div>
+						<div class="image-title">
+							<p>Dribble</p>
+							<p>Outubro 26, 2022</p>
+						</div>
 					</div>
-				</div>
-				<div class="location-info">
-					<h1>Front End Developer</h1>
-					<div class="location">
-						<p>
-							<span class="icon-location"
-								><i class="fa-solid fa-location-dot"></i
-							></span>
-							San Antonio
-						</p>
-						<p>
-							<span class="icon-dolar"
-								><i class="fa-solid fa-dollar-sign"></i
-							></span>
-							130k-160k
-						</p>
-					</div>
-				</div>
-				<div class="datails">
-					<div class="qualification">
-						<h1>Minimum Qualification</h1>
-					</div>
-					<div class="Preferred">
-						<h1>Preferred Qualification</h1>
-					</div>
-					<div class="about-job">
-						<h1>About the job</h1>
-					</div>
-					<div class="working">
-						<h1>Working at Dribble</h1>
-					</div>
-				</div>
-				<div class="personal-info">
-					<form action="">
-						<div class="pDetails">
-							<h1>1. Personal Details</h1>
+					<div class="location-info">
+						<h1>Front End Developer</h1>
+						<div class="location">
 							<p>
-								We'll need these details in order to be able to contact
-								you.
+								<span class="icon-location"
+									><i class="fa-solid fa-location-dot"></i
+								></span>
+								San Antonio
+							</p>
+							<p>
+								<span class="icon-dolar"
+									><i class="fa-solid fa-dollar-sign"></i
+								></span>
+								130k-160k
+							</p>
+						</div>
+					</div>
+					<div class="datails">
+						<div class="qualification">
+							<h1>Requisitos mínimos</h1>
+						</div>
+						<div class="about-job">
+							<h1>Descrićão do emprego</h1>
+						</div>
+					</div>
+					<div class="personal-info">
+						<div class="pDetails">
+							<h1>1. Detalhe pessoal</h1>
+							<p>
+								Nós precisamos de algumas informações para que possamos
+								entrar em contato com você.
 							</p>
 
 							<div>
@@ -83,8 +79,8 @@
 							</div>
 						</div>
 						<div class="pProfile">
-							<h1>2. Profile</h1>
-							<p>Let us know why you want to work with us!</p>
+							<h1>2. Perfil</h1>
+							<p>Deixa-nos saber o porquê de querer trabalhar conosco</p>
 
 							<div>
 								<textarea
@@ -104,23 +100,20 @@
 							</div>
 						</div>
 						<div class="sProfile">
-							<h1>Submit Application</h1>
+							<h1>Submeter aplicaćão</h1>
 							<p>
-								In order to contact you with future jobs that you may be
-								interested in,we need to store your personal data.
-							</p>
-							<p>
-								If you are happy for us to do so please click the
-								checkbox below. You can view our GDPR / Privacy notice
-								here.
+								A fim de contatá-lo com trabalhos futuros que você pode
+								ser interessado, precisamos armazenar seus dados
+								pessoais.
 							</p>
 						</div>
-
 						<input type="submit" name="inpSubmit" value="Aplicar" />
-					</form>
-				</div>
-			</section>
-			<section class="right-side"></section>
+					</div>
+				</section>
+				<section class="right-side">
+					<button>Aplicar</button>
+				</section>
+			</form>
 		</main>
 	</body>
 </html>
