--- a/HireUP/web/pages/navbar.html
+++ b/HireUP/web/pages/navbar.html
@@ -15,9 +15,9 @@
     
         <div class="nav-middle">
           <nav class="nav-menu">
-            <a href="#" class="nav-link">Home</a>
+            <a href="../index.html" class="nav-link">Home</a>
             <a href="#" class="nav-link">Empresas</a>
-            <a href="#" class="nav-link">Browse</a>
+            <a href="../pages/browse.html" class="nav-link">Browse</a>
             <a href="#" class="nav-link">Blog</a>
           </nav>
         </div>
