--- a/HireUP/web/pages/browse.html
+++ b/HireUP/web/pages/browse.html
@@ -7,6 +7,7 @@
     <title>Browse Jobs!</title>
     <link rel="stylesheet" href="../css/browse.css" />
     <link rel="stylesheet" href="../css/navbar.css">
+    <link rel="shortcut icon" href="../img/logo.png" type="image/x-icon" />
     <script
       src="https://kit.fontawesome.com/7a342b9685.js"
       crossorigin="anonymous"
