--- a/HireUP/web/pages/signup.html
+++ b/HireUP/web/pages/signup.html
@@ -41,7 +41,7 @@
             <h3>Sign up</h3>
             <p>Comece a postar e se candidatar a empregos</p>
           </div>
-          <form action="" method="post">
+          <form action="signup.jsp" accept-charset="UTF-8" method="post">
             
             <label for="email">Email</label>
             <input type="email" name="Email" maxlength="120" placeholder="" id="email" class="form-field w-input">
