hehehe header +etc

--- a/HireUP/web/pages/browse.html
+++ b/HireUP/web/pages/browse.html
@@ -54,7 +54,7 @@
       </div>
     </section>
     <section class="search">
-      <form action="" class="search1">
+      <form action="./searchResults.html" class="search1">
         <div class="input-wrapper">
           <span><i class="fa-solid fa-magnifying-glass"></i></span>
           <input type="search" placeholder="Pesquisar..." />
