--- a/HireUP/web/pages/navbar.html
+++ b/HireUP/web/pages/navbar.html
@@ -26,7 +26,9 @@
         <div>
           <nav class="right-nav">
             <a href="#" class="nav-link">Poste um Emprego</a>
-          <button class="btn-primary">Log in</button>
+          <form action="./login.html">
+            <button class="btn-primary">Log in</button>
+          </form>
           </nav>
           
         </div>
