--- a/HireUP/web/pages/navbar.html
+++ b/HireUP/web/pages/navbar.html
@@ -9,7 +9,7 @@
 <body>
     <div class="navbar">
         <div class="left-nav">
-          <a href="#" class="brand"><img src="../img/logo.png" alt="Logo" class="logo"  height="30"></a>
+          <a href="../index.html" class="brand"><img src="../img/logo.png" alt="Logo" class="logo"  height="30"></a>
     
         </div>
     
