Sei la qu eedit foi essa

--- a/HireUP/web/pages/applyTo.html
+++ b/HireUP/web/pages/applyTo.html
@@ -18,7 +18,9 @@
 			<form action="">
 				<section class="left-side">
 					<div class="icon">
-						<div class="image"></div>
+						<div class="image">
+							<img src="../img/logo.png" alt="" style="height: 48px" />
+						</div>
 						<div class="image-title">
 							<p>Dribble</p>
 							<p>Outubro 26, 2022</p>
@@ -44,9 +46,25 @@
 					<div class="datails">
 						<div class="qualification">
 							<h1>Requisitos mínimos</h1>
+							<ul>
+								<li>
+									Lorem ipsum dolor sit, amet consectetur adipisicing
+									elit. Quibusdam blanditiis ullam aliquam natus, illo
+									minus hic sequi modi iure, id deleniti, provident
+									perferendis quia tempore voluptate distinctio in
+									aspernatur inventore!
+								</li>
+							</ul>
 						</div>
 						<div class="about-job">
 							<h1>Descrićão do emprego</h1>
+							<p>
+								Lorem ipsum dolor sit, amet consectetur adipisicing
+								elit. Quibusdam blanditiis ullam aliquam natus, illo
+								minus hic sequi modi iure, id deleniti, provident
+								perferendis quia tempore voluptate distinctio in
+								aspernatur inventore!
+							</p>
 						</div>
 					</div>
 					<div class="personal-info">
