--- a/HireUP/web/index.html
+++ b/HireUP/web/index.html
@@ -19,7 +19,7 @@
 				<div class="left-nav">
 					<a href="#" class="brand"
 						><img
-							src="./img/logo.png"
+							src="../img/logo.png"
 							alt="Logo"
 							class="logo"
 							height="30"
@@ -65,7 +65,7 @@
 						<i class="fa-solid fa-magnifying-glass"></i>
 						<input
 							type="search"
-							name=""
+							name="pesquisa"
 							id=""
 							placeholder="Pesquise..."
 						/>
