--- a/HireUP/web/index.html
+++ b/HireUP/web/index.html
@@ -17,7 +17,7 @@
 		<header>
 			<div class="navbar">
 				<div class="left-nav">
-					<a href="#" class="brand"
+					<a href="../index.html" class="brand"
 						><img
 							src="../img/logo.png"
 							alt="Logo"
@@ -28,9 +28,9 @@
 
 				<div class="nav-middle">
 					<nav class="nav-menu">
-						<a href="#" class="nav-link">Home</a>
+						<a href="../index.html" class="nav-link">Home</a>
 						<a href="#" class="nav-link">Empresas</a>
-						<a href="#" class="nav-link">Browse</a>
+						<a href="../pages/browse.html" class="nav-link">Browse</a>
 						<a href="#" class="nav-link">Blog</a>
 					</nav>
 				</div>
@@ -38,7 +38,9 @@
 				<div>
 					<nav class="right-nav">
 						<a href="#" class="nav-link">Poste um Emprego</a>
-						<button class="btn-primary">Log in</button>
+						<form action="./login.html">
+							<button class="btn-primary">Log in</button>
+						</form>
 					</nav>
 				</div>
 			</div>
