--- a/HireUP/web/index.html
+++ b/HireUP/web/index.html
@@ -17,20 +17,16 @@
 		<header>
 			<div class="navbar">
 				<div class="left-nav">
-					<a href="../index.html" class="brand"
-						><img
-							src="../img/logo.png"
-							alt="Logo"
-							class="logo"
-							height="30"
+					<a href="#" class="brand"
+						><img src="img/logo.png" alt="Logo" class="logo" height="30"
 					/></a>
 				</div>
 
 				<div class="nav-middle">
 					<nav class="nav-menu">
-						<a href="../index.html" class="nav-link">Home</a>
+						<a href="index.html" class="nav-link">Home</a>
 						<a href="#" class="nav-link">Empresas</a>
-						<a href="../pages/browse.html" class="nav-link">Browse</a>
+						<a href="pages/browse.html" class="nav-link">Browse</a>
 						<a href="#" class="nav-link">Blog</a>
 					</nav>
 				</div>
@@ -38,7 +34,7 @@
 				<div>
 					<nav class="right-nav">
 						<a href="#" class="nav-link">Poste um Emprego</a>
-						<form action="./login.html">
+						<form action="./pages/login.jsp">
 							<button class="btn-primary">Log in</button>
 						</form>
 					</nav>
