--- a/HireUP/web/pages/applyTo.html
+++ b/HireUP/web/pages/applyTo.html
@@ -13,7 +13,37 @@
 		<title>Aplicar - para trabalhar</title>
 	</head>
 	<body>
-		<header></header>
+		<header>
+			<div class="navbar">
+				<div class="left-nav">
+					<a href="../index.html" class="brand"
+						><img
+							src="../img/logo.png"
+							alt="Logo"
+							class="logo"
+							height="30"
+					/></a>
+				</div>
+
+				<div class="nav-middle">
+					<nav class="nav-menu">
+						<a href="../index.html" class="nav-link">Home</a>
+						<a href="#" class="nav-link">Empresas</a>
+						<a href="../pages/browse.html" class="nav-link">Browse</a>
+						<a href="#" class="nav-link">Blog</a>
+					</nav>
+				</div>
+
+				<div>
+					<nav class="right-nav">
+						<a href="#" class="nav-link">Poste um Emprego</a>
+						<form action="./login.jsp">
+							<button class="btn-primary">Log in</button>
+						</form>
+					</nav>
+				</div>
+			</div>
+		</header>
 		<main>
 			<form action="">
 				<section class="left-side">
