--- a/HireUP/web/pages/applyTo.html
+++ b/HireUP/web/pages/applyTo.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="shortcut icon" href="../img/logo.png" type="image/x-icon" />
 		<link rel="stylesheet" href="../css/apply.css" />
+		<link rel="stylesheet" href="../css/navbar.css" />
 		<script
 			src="https://kit.fontawesome.com/1f168297b1.js"
 			crossorigin="anonymous"
