--- a/HireUP/web/pages/signup.html
+++ b/HireUP/web/pages/signup.html
@@ -44,11 +44,11 @@
           <form action="signup.jsp" accept-charset="UTF-8" method="post">
             
             <label for="email">Email</label>
-            <input type="email" name="Email" maxlength="120" placeholder="" id="email" class="form-field w-input">
+            <input type="email" name="email" maxlength="120" placeholder="" id="email" class="form-field w-input">
             <label for="nome">Nome</label>
             <input type="text" name="nome" maxlength="120" placeholder="" id="nome" class="form-field w-input">
-            <label for="password">Password</label>
-            <input type="password" name="Password" id="password" maxlength="20" class="form-field w-input" placeholder="">
+            <label for="password">Senha</label>
+            <input type="password" name="email" id="password" maxlength="20" class="form-field w-input" placeholder="">
             <input type="submit" value="Crie uma Conta" data-wait="Por favor aguarde..." class="btn-primary w-button">
           </form>
           <div class="form-footer">
