--- a/HireUP/web/pages/browse.html
+++ b/HireUP/web/pages/browse.html
@@ -62,7 +62,7 @@
       <form action="./searchResults.html" class="search1">
         <div class="input-wrapper">
           <span><i class="fa-solid fa-magnifying-glass"></i></span>
-          <input type="search" placeholder="Pesquisar..." />
+          <input type="search" name="pesquisa" placeholder="Pesquisar..." />
         </div>
         <button>pesquisar</button>
       </form>
@@ -135,7 +135,13 @@
                 <span><i class="fa-solid fa-coins"></i> <span class="dollar-sign"><i class="fa-solid fa-dollar-sign"></i></span> 150k <span>-</span> 200k </span>
               </div>
               <div class="card-ver-mais">
-                <form action="" method="post">
+                <form action="./applyTo.html" method="post">
+                  <input type="hidden" name="">
+                  <input type="hidden" name="">
+                  <input type="hidden" name="">
+                  <input type="hidden" name="">
+                  <input type="hidden" name="">
+                  
                   <button>Ver mais</button>
                 </form>
               </div>
