--- a/HireUP/web/pages/searchResults.html
+++ b/HireUP/web/pages/searchResults.html
@@ -8,6 +8,13 @@
     <link rel="shortcut icon" href="../img/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="../css/searchResults.css">
     <link rel="stylesheet" href="../css/navbar.css">
+
+
+    <script
+    src="https://kit.fontawesome.com/7a342b9685.js"
+    crossorigin="anonymous"
+  ></script>
+    
 </head>
 <body>
    <section>
@@ -40,18 +47,54 @@
 
    </section>
 
-   <section>
-
+   <section class="search-title">
+        <h2>Resultados da pesquisa</h2>
    </section>
    
    <section class="search">
     <form action="./searchResults.html" class="search1">
       <div class="input-wrapper">
         <span><i class="fa-solid fa-magnifying-glass"></i></span>
-        <input type="search" placeholder="Pesquisar..." />
+        <input type="search" name="pesquisa" placeholder="Pesquisar..." />
       </div>
       <button>pesquisar</button>
     </form>
+  </section>
+
+
+  <section>
+    <div class="right-filter">
+        <div class="mostrar-jobs">
+          <!-- listar jobs com jsp-->
+          <div class="card-jobs">
+            <div class="card-top">
+              <div>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/3/35/Tux.svg" width="100%">
+              </div>
+              <span>Nome_Empresa</span>
+            </div>
+            <div class="card-middle">
+              <span>Front-end Developer</span>
+            </div>
+            <div class="card-category-and-type">
+              <div>Marketing</div>
+              <div>Part Time</div>
+            </div>
+            <div class="card-botttom">
+              <span><i class="fa-solid fa-coins"></i> <span class="dollar-sign"><i class="fa-solid fa-dollar-sign"></i></span> 150k <span>-</span> 200k </span>
+            </div>
+            <div class="card-ver-mais">
+              <form action="./applyTo.html" method="post">
+                <input type="hidden" name="">
+                <input type="hidden" name="">
+                <input type="hidden" name="">
+                <input type="hidden" name="">
+                <input type="hidden" name="">
+                
+                <button>Ver mais</button>
+              </form>
+            </div>
+          </div>
   </section>
   
 </body>
