--- a/HireUP/web/pages/applyTo.html
+++ b/HireUP/web/pages/applyTo.html
@@ -106,7 +106,7 @@
 								entrar em contato com você.
 							</p>
 
-							<div>
+							<div class="pDetailsSub">
 								<input
 									type="text"
 									name="firstName"
