Login e Usuario com BD

--- a/HireUP/web/pages/login.html
+++ b/HireUP/web/pages/login.html
@@ -20,8 +20,8 @@
     <div class="nav-middle">
       <nav class="nav-menu">
         <a href="../index.html" class="nav-link">Home</a>
-        <a href="#" class="nav-link">Company</a>
-        <a href="#" class="nav-link">Browse</a>
+        <a href="#" class="nav-link">Empresas</a>
+        <a href="#" class="nav-link">Pesquise</a>
         <a href="#" class="nav-link">Blog</a>
       </nav>
     </div>
