--- a/HireUP/web/pages/applyTo.html
+++ b/HireUP/web/pages/applyTo.html
@@ -77,6 +77,7 @@
 					<div class="datails">
 						<div class="qualification">
 							<h1>Requisitos mínimos</h1>
+							<br />
 							<ul>
 								<li>
 									Lorem ipsum dolor sit, amet consectetur adipisicing
@@ -89,6 +90,7 @@
 						</div>
 						<div class="about-job">
 							<h1>Descrićão do emprego</h1>
+							<br />
 							<p>
 								Lorem ipsum dolor sit, amet consectetur adipisicing
 								elit. Quibusdam blanditiis ullam aliquam natus, illo
@@ -131,32 +133,35 @@
 							<h1>2. Perfil</h1>
 							<p>Deixa-nos saber o porquê de querer trabalhar conosco</p>
 
-							<div>
+							<div class="pProfileSub">
 								<textarea
 									name="1profileArea"
-									cols="30"
-									rows="10"
+									cols="80"
+									rows="12"
 									required
 									placeholder="Porque você quer trabalhar conosco?"
 								></textarea>
+								<br />
 								<textarea
 									name="2profileArea"
-									cols="30"
-									rows="10"
+									cols="80"
+									rows="12"
 									required
 									placeholder="Porque você é a pessoa certa para a vaga?"
 								></textarea>
 							</div>
 						</div>
 						<div class="sProfile">
-							<h1>Submeter aplicaćão</h1>
+							<h1>3. Submeter aplicaćão</h1>
 							<p>
 								A fim de contatá-lo com trabalhos futuros que você pode
 								ser interessado, precisamos armazenar seus dados
 								pessoais.
 							</p>
 						</div>
-						<input type="submit" name="inpSubmit" value="Aplicar" />
+						<div class="inpSubmite">
+							<input type="submit" name="inpSubmit" value="Aplicar" />
+						</div>
 					</div>
 				</section>
 				<section class="right-side">
