--- a/HireUP/web/pages/login.html
+++ b/HireUP/web/pages/login.html
@@ -22,7 +22,7 @@
         <a href="../index.html" class="nav-link">Home</a>
         <a href="#" class="nav-link">Empresas</a>
         <a href="#" class="nav-link">Pesquise</a>
-        <a href="#" class="nav-link">Blog</a>
+        <a href="#" class="nav-link">Perfil</a>
       </nav>
     </div>
 
