--- a/HireUP/web/pages/searchResults.html
+++ b/HireUP/web/pages/searchResults.html
@@ -28,8 +28,8 @@
           <nav class="nav-menu">
             <a href="../index.html" class="nav-link">Home</a>
             <a href="#" class="nav-link">Empresas</a>
-            <a href="../pages/browse.html" class="nav-link">Browse</a>
-            <a href="#" class="nav-link">Blog</a>
+            <a href="../pages/browse.html" class="nav-link">Pesquise</a>
+            <a href="#" class="nav-link">Perfil</a>
           </nav>
         </div>
     
@@ -86,7 +86,7 @@
               <span><i class="fa-solid fa-coins"></i> <span class="dollar-sign"><i class="fa-solid fa-dollar-sign"></i></span> 150k <span>-</span> 200k </span>
             </div>
             <div class="card-ver-mais">
-              <form action="./applyTo.html" method="post">
+              <form action="vermais.jsp" method="post">
                 <input type="hidden" name="">
                 <input type="hidden" name="">
                 <input type="hidden" name="">
