--- a/HireUP/web/pages/login.html
+++ b/HireUP/web/pages/login.html
@@ -29,7 +29,7 @@
 
     <div>
       <nav class="right-nav">
-        <a href="#" class="nav-link">Poste um Emprego</a>
+        <a href="submitJob.html" class="nav-link">Poste um Emprego</a>
       <button class="btn-primary">Log in</button>
       </nav>
       
