Submeter empresa esta feito

--- a/HireUP/web/pages/login.html
+++ b/HireUP/web/pages/login.html
@@ -20,9 +20,9 @@
     <div class="nav-middle">
       <nav class="nav-menu">
         <a href="../index.html" class="nav-link">Home</a>
-        <a href="#" class="nav-link">Empresas</a>
-        <a href="#" class="nav-link">Pesquise</a>
-        <a href="#" class="nav-link">Perfil</a>
+        <a href="./empresa.html" class="nav-link">Empresas</a>
+        <a href="./browse.html" class="nav-link">Pesquise</a>
+        <a href="./subEmpresa.html" class="nav-link">Submeter Empresa</a>
       </nav>
     </div>
 
