--- a/HireUP/web/pages/signup.html
+++ b/HireUP/web/pages/signup.html
@@ -20,7 +20,7 @@
           <a href="../index.html" class="nav-link">Home</a>
           <a href="#" class="nav-link">Empresas</a>
           <a href="#" class="nav-link">Pesquise</a>
-          <a href="#" class="nav-link">Perfil</a>
+          <a href="#" class="nav-link">Submeter Empresa</a>
         </nav>
       </div>
   
