--- a/HireUP/web/pages/browse.html
+++ b/HireUP/web/pages/browse.html
@@ -25,9 +25,9 @@
         <div class="nav-middle">
           <nav class="nav-menu">
             <a href="../index.html" class="nav-link">Home</a>
-            <a href="#" class="nav-link">Empresas</a>
-            <a href="../pages/browse.html" class="nav-link">Browse</a>
-            <a href="#" class="nav-link">Blog</a>
+            <a href="./empresa.html" class="nav-link">Empresas</a>
+            <a href="../pages/browse.html" class="nav-link">Pesquise</a>
+            <a href="./subEmpresa.html" class="nav-link">Submeter Empresa</a>
           </nav>
         </div>
 
