--- a/HireUP/web/pages/navbar.html
+++ b/HireUP/web/pages/navbar.html
@@ -17,9 +17,9 @@
 			<div class="nav-middle">
 				<nav class="nav-menu">
 					<a href="../index.html" class="nav-link">Home</a>
-					<a href="#" class="nav-link">Empresas</a>
-					<a href="../pages/browse.html" class="nav-link">Browse</a>
-					<a href="#" class="nav-link">Blog</a>
+					<a href="../pages/empresa.html" class="nav-link">Empresas</a>
+					<a href="../pages/browse.html" class="nav-link">Pesquise</a>
+					<a href="../pages/subEmpresa.html" class="nav-link">Submeter Empresa</a>
 				</nav>
 			</div>
 
