--- a/HireUP/web/index.html
+++ b/HireUP/web/index.html
@@ -33,7 +33,7 @@
 
 				<div>
 					<nav class="right-nav">
-						<a href="#" class="nav-link">Poste um Emprego</a>
+						<a href="pages/submitJob.html" class="nav-link">Poste um Emprego</a>
 						<form action="./pages/login.jsp">
 							<button class="btn-primary">Log in</button>
 						</form>
