--- a/HireUP/web/index.html
+++ b/HireUP/web/index.html
@@ -26,7 +26,7 @@
 					<nav class="nav-menu">
 						<a href="index.html" class="nav-link">Home</a>
 						<a href="#" class="nav-link">Empresas</a>
-						<a href="pages/browse.html" class="nav-link">Browse</a>
+						<a href="pages/browse.jsp" class="nav-link">Browse</a>
 						<a href="#" class="nav-link">Blog</a>
 					</nav>
 				</div>
