--- a/HireUP/web/pages/subEmpresa.html
+++ b/HireUP/web/pages/subEmpresa.html
@@ -72,7 +72,7 @@
                 
                 <div>
                     <label for="contato">Contacto:</label>
-                    <input name="contato" id="contato" type="text" maxlength="12" required>
+                    <input name="contato" id="contato" type="number" maxlength="12" required>
                 </div>
 
                 <div>
@@ -82,15 +82,15 @@
 
                 <div>
                     <label for="email">Email:</label>
-                    <input name="email" id="email" type="number" min="5000" required>
+                    <input name="email" id="email" type="email" min="5000" required>
                 </div>
                 <div>
                     <label for="descricao">Descrição do empresa:</label>
                     <textarea name="descricao" id="descricao" cols="30" rows="15" placeholder="Digite as informações sobre a empresa, deixe-nos saber quem voces são e o que representam" required></textarea>
                 </div>
 
-                <div>
-                    <button style="font-weight: bold; font-size: 17px;">Submeter</button>
+                <div style="display: flex; align-items: center;">
+                   <a href="./empresa.html" ><button style="width: 25vw;font-weight: bold; font-size: 17px;">Submeter</button></a> 
                 </div>
             </form>
         </div>
