--- a/HireUP/web/pages/submitJob.html
+++ b/HireUP/web/pages/submitJob.html
@@ -130,6 +130,14 @@
                 </div>
 
                 <div>
+                    <select name="empresa" id="empresa" required>
+                        <option selected disabled>Selecione a empresa:</option>
+                        <option value="Full Time">Full time</option>
+                        <option value="Part Time">Part Time</option>
+                    </select>
+                </div>
+
+                <div>
                     <button>Submeter</button>
                 </div>
             </form>
