--- a/HireUP/web/pages/submitJob.html
+++ b/HireUP/web/pages/submitJob.html
@@ -26,7 +26,7 @@
           <nav class="nav-menu">
             <a href="../index.html" class="nav-link">Home</a>
             <a href="#" class="nav-link">Empresas</a>
-            <a href="../pages/browse.html" class="nav-link">Pesquise</a>
+            <a href="../pages/browse.jsp" class="nav-link">Pesquise</a>
             <a href="#" class="nav-link">Submeter Empresa</a>
           </nav>
         </div>
