--- a/HireUP/web/pages/submitJob.html
+++ b/HireUP/web/pages/submitJob.html
@@ -130,7 +130,7 @@
                 </div>
 
                 <div>
-                    <select name="empresa" id="empresa" required>
+                    <select name="empresa" id="empresa" >
                         <option selected disabled>Selecione a empresa:</option>
                         <option value="Full Time">Full time</option>
                         <option value="Part Time">Part Time</option>
