--- a/HireUP/web/index.html
+++ b/HireUP/web/index.html
@@ -59,7 +59,7 @@
 					</p>
 				</div>
 				<div class="search">
-					<form action="/pages/RedirecionarPesquisa.jsp">
+					<form action="./pages/RedirecionarPesquisa.jsp">
 						<i class="fa-solid fa-magnifying-glass"></i>
 						<input
 							type="search"
