Adicao da empresa jsp

--- a/HireUP/web/pages/empresa.html
+++ b/HireUP/web/pages/empresa.html
@@ -48,11 +48,7 @@
 			<form action="">
 				<div class="infinite-carousel">
 					<div id="carousel" class="carousel-wrapper">
-						<div class="carousel-items">
-							<div class="carousel-block">
-								<p></p>
-							</div>
-						</div>
+						<div class="carousel-items"></div>
 					</div>
 				</div>
 			</form>
