--- a/HireUP/web/index.html
+++ b/HireUP/web/index.html
@@ -25,7 +25,7 @@
 				<div class="nav-middle">
 					<nav class="nav-menu">
 						<a href="index.html" class="nav-link">Home</a>
-						<a href="#" class="nav-link">Empresas</a>
+						<a href="./pages/empresa.jsp" class="nav-link">Empresas</a>
 						<a href="pages/browse.jsp" class="nav-link">Browse</a>
 						<a href="#" class="nav-link">Blog</a>
 					</nav>
@@ -33,7 +33,9 @@
 
 				<div>
 					<nav class="right-nav">
-						<a href="pages/submitJob.html" class="nav-link">Poste um Emprego</a>
+						<a href="pages/submitJob.html" class="nav-link"
+							>Poste um Emprego</a
+						>
 						<form action="./pages/login.jsp">
 							<button class="btn-primary">Log in</button>
 						</form>
