--- a/HireUP/web/pages/empresa.html
+++ b/HireUP/web/pages/empresa.html
@@ -48,7 +48,20 @@
 			<form action="">
 				<div class="infinite-carousel">
 					<div id="carousel" class="carousel-wrapper">
-						<div class="carousel-items"></div>
+						<div class="carousel-items">
+							<div class="carousel-block">
+								<p>Lore</p>
+							</div>
+							<div class="carousel-block">
+								<p>Lore</p>
+							</div>
+							<div class="carousel-block">
+								<p>Lore</p>
+							</div>
+							<div class="carousel-block">
+								<p>Lore</p>
+							</div>
+						</div>
 					</div>
 				</div>
 			</form>
