--- a/HireUP/web/pages/signup.html
+++ b/HireUP/web/pages/signup.html
@@ -17,11 +17,11 @@
   
       <div class="nav-middle">
         <nav class="nav-menu">
-          <a href="../index.html" class="nav-link">Home</a>
-          <a href="#" class="nav-link">Empresas</a>
-          <a href="#" class="nav-link">Pesquise</a>
-          <a href="#" class="nav-link">Submeter Empresa</a>
-        </nav>
+        <a href="../index.html" class="nav-link">Home</a>
+        <a href="./empresa.jsp" class="nav-link">Empresas</a>
+        <a href="./browse.jsp" class="nav-link">Pesquise</a>
+        <a href="./subEmpresa.html" class="nav-link">Submeter Empresa</a>
+      </nav>
       </div>
   
   
