--- a/HireUP/web/index.html
+++ b/HireUP/web/index.html
@@ -24,11 +24,11 @@
 
 				<div class="nav-middle">
 					<nav class="nav-menu">
-						<a href="index.html" class="nav-link">Home</a>
-						<a href="./pages/empresa.jsp" class="nav-link">Empresas</a>
-						<a href="pages/browse.jsp" class="nav-link">Browse</a>
-						<a href="#" class="nav-link">Blog</a>
-					</nav>
+                                            <a href="./index.html" class="nav-link">Home</a>
+                                            <a href="./pages/empresa.jsp" class="nav-link">Empresas</a>
+                                            <a href="./pages/browse.jsp" class="nav-link">Pesquise</a>
+                                            <a href="./pages/subEmpresa.html" class="nav-link">Submeter Empresa</a>
+                                        </nav>
 				</div>
 
 				<div>
