--- a/HireUP/web/pages/navbar.html
+++ b/HireUP/web/pages/navbar.html
@@ -16,11 +16,11 @@
 
 			<div class="nav-middle">
 				<nav class="nav-menu">
-					<a href="../index.html" class="nav-link">Home</a>
-					<a href="../pages/empresa.html" class="nav-link">Empresas</a>
-					<a href="../pages/browse.jsp" class="nav-link">Pesquise</a>
-					<a href="../pages/subEmpresa.html" class="nav-link">Submeter Empresa</a>
-				</nav>
+        <a href="../index.html" class="nav-link">Home</a>
+        <a href="./empresa.jsp" class="nav-link">Empresas</a>
+        <a href="./browse.jsp" class="nav-link">Pesquise</a>
+        <a href="./subEmpresa.html" class="nav-link">Submeter Empresa</a>
+      </nav>
 			</div>
 
 		<div>
