--- a/HireUP/web/index.html
+++ b/HireUP/web/index.html
@@ -33,7 +33,7 @@
 
 				<div>
 					<nav class="right-nav">
-						<a href="pages/submitJob.html" class="nav-link"
+						<a href="pages/submitJob.jsp" class="nav-link"
 							>Poste um Emprego</a
 						>
 						<form action="./pages/login.jsp">
