--- a/HireUP/web/pages/signup.html
+++ b/HireUP/web/pages/signup.html
@@ -27,7 +27,7 @@
   
       <div>
         <nav class="right-nav">
-          <a href="#" class="nav-link">Poste um Emprego</a>
+          <a href="./submitJob.jsp" class="nav-link">Poste um Emprego</a>
         <button class="btn-primary">Log in</button>
         </nav>
         
