--- a/HireUP/web/pages/subEmpresa.html
+++ b/HireUP/web/pages/subEmpresa.html
@@ -31,7 +31,7 @@
 
         <div>
           <nav class="right-nav">
-            <a href="#" class="nav-link">Poste um Emprego</a>
+            <a href="./submitJob.jsp" class="nav-link">Poste um Emprego</a>
             <form action="./login.html">
               <button class="btn-primary">Log in</button>
             </form>
