--- a/HireUP 2.0/web/Perfil da Empresa/index.html
+++ b/HireUP 2.0/web/Perfil da Empresa/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../css/navbar.css">
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="https://kit.fontawesome.com/1f168297b1.js" crossorigin="anonymous"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <title>Perfil da Empresa</title>
@@ -24,20 +25,18 @@
             <nav class="nav-menu">
                 <a href="../index.html" class="nav-link">Home</a>
                 <a href="./empresa.jsp" class="nav-link">Empresas</a>
-                <a href="./browse.jsp" class="nav-link">Vagas</a>
+                <!-- <a href="./browse.jsp" class="nav-link" style="visibility: hidden;">Vagas</a> -->
             </nav>
         </div>
-
-
         <div>
-            <nav class="right-nav" style="visibility: hidden;">
+            <nav class="right-nav">
                 <a href="./submitJob.jsp" class="nav-link">Poste um Emprego</a>
-                <button class="btn-primary">Log in</button>
+                <a href="./submitJob.jsp" class="nav-link"><i class="fa-solid fa-inbox"></i></a>
+                <!-- <button class="btn-primary">Log in</button> -->
             </nav>
 
         </div>
     </div>
-
     <!-- HEADER END  -->
 
     <div class="container-fluid text-center emp-profile">
