--- a/HireUP 2.0/web/Perfil do usuario/index.html
+++ b/HireUP 2.0/web/Perfil do usuario/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../css/navbar.css">
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="https://kit.fontawesome.com/1f168297b1.js" crossorigin="anonymous"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <title>Perfil do usuário</title>
@@ -32,6 +33,7 @@
         <div>
             <nav class="right-nav" style="visibility: hidden;">
                 <a href="./submitJob.jsp" class="nav-link">Poste um Emprego</a>
+                <a href="./submitJob.jsp" class="nav-link"><i class="fa-solid fa-inbox"></i></a>
                 <button class="btn-primary">Log in</button>
             </nav>
 
