--- a/HireUP 2.0/web/index.html
+++ b/HireUP 2.0/web/index.html
@@ -68,7 +68,7 @@
 				<figure>
 					<img src="https://assets.website-files.com/63337525695d8ba70ab44222/6358b2bbb9fdec69f1b1c7a4_adam-rhodes-ep5lX958f7E-unsplash-p-2000.webp"
 						alt="" />
-					<figcaption>O mais alto que você possa ir.</figcaption>
+                                        <figcaption> <a href="./Perfil da Empresa/index.jsp">O mais alto que você possa ir.</a> </figcaption>
 				</figure>
 			</div>
 		</section>
