--- a/HireUP 2.0/web/Pages - Empresas/signupEmpresa.html
+++ b/HireUP 2.0/web/Pages - Empresas/signupEmpresa.html
@@ -35,7 +35,7 @@
 		<div class="left">
 			<div class="form-block">
 				<div class="form-title">
-					<h3>Sign up</h3>
+					<h3>HireUP</h3>
 					<p>Registre a sua empresa e comece a postar a empregos </p>
 				</div>
 				<form action="signup.jsp" accept-charset="UTF-8" method="post">
@@ -71,8 +71,9 @@
 						class="form-field w-input">
 					<input type="password" name="senha" id="senha" maxlength="20" class="form-field w-input"
 						placeholder="Senha *" required>
-					<input type="text" name="nome" maxlength="120" placeholder="Formação " class="form-field w-input">
-					<input type="text" name="nome" maxlength="120" placeholder="Localização *" required
+						<textarea name="descricao" placeholder="Descrição*"id="text" cols="55" rows="9"></textarea>
+				
+					<input type="text" name="localizacao" maxlength="120" placeholder="Localização *" required
 						class="form-field w-input">
 					<br><br>
 					<input type="submit" value="Crie uma Conta" data-wait="Por favor aguarde..."
@@ -87,9 +88,10 @@
 
 		<div class="right">
 			<div class="content-block">
-				<h1>Vamos criar a sua conta.</h1>
-				<div>
-					<h2>Adicionar um texto aqui mais tarde</h2>
+				<h1>Registre-se como empregador.</h1>
+				<div class="quote">
+					<h2>Teoria e Prática do Comércio</h2>
+					<blockquote><q>Não é o trabalho, mas o saber trabalhar, que é o segredo do êxito no trabalho. Saber trabalhar quer dizer: não fazer um esforço inútil, persistir no esforço até ao fim, e saber reconstruir uma orientação quando se verificou que ela era, ou se tornou, errada.</q></blockquote>
 				</div>
 			</div>
 		</div>
