--- a/HireUP 2.0/web/Pages - Empresas/signupEmpresa.html
+++ b/HireUP 2.0/web/Pages - Empresas/signupEmpresa.html
@@ -38,42 +38,45 @@
 					<h3>HireUP</h3>
 					<p>Registre a sua empresa e comece a postar a empregos </p>
 				</div>
-				<form action="signup.jsp" accept-charset="UTF-8" method="post">
+				<form action="signupEmpresa.jsp" accept-charset="UTF-8" method="post">
 					<input type="text" name="nome" maxlength="120" placeholder="Nome da Empresa*" required
 						class="form-field w-input">
-					<select name="tipo"
-						class="form-field w-input">
+
+					<select name="tipo" class="form-field w-input">
 						<option value="" disabled selected>Selecione o Tipo de Empresa</option>
-						<option value="">Empresa - Publica</option>
-						<option value="">Empresa - Privada</option>
-						<option value="">Sem Fins Lucrativos</option>
-						<option value="">Governo</option>
-						<option value="">Subsidiaria</option>
-						<option value="">Firma</option>
-						<option value="">Contratual</option>
-						<option value="">Outro</option>
+						<option value="Empresa - Publica">Empresa - Publica</option>
+						<option value="Empresa - Privada">Empresa - Privada</option>
+						<option value="Sem Fins Lucrativos">Sem Fins Lucrativos</option>
+						<option value="Governo">Governo</option>
+						<option value="Subsidiaria">Subsidiaria</option>
+						<option value="Firma">Firma</option>
+						<option value="Contratual">Contratual</option>
+						<option value="Outro">Outro</option>
 					</select>
-					<select name="setor"
-					class="form-field w-input">
-					<option value="" disabled selected>Selecione o Sector</option>
-						<option value="">Tecnologias de Informacao</option>
-						<option value="">Marketing</option>
-						<option value="">Telecomunicao</option>
-						<option value="">Administracao</option>
-						<option value="">Construcao</option>
-						<option value="">Saude</option>
-						<option value="">Industrial</option>
-						<option value="">Multimedia</option>
-						<option value="">Seguranca</option>
-						<option value="">Outro</option>
+
+					<select name="setor" class="form-field w-input">
+						<option value="" disabled selected>Selecione o Sector</option>
+						<option value="Tecnologias de Informacao">Tecnologias de Informacao</option>
+						<option value="Marketing">Marketing</option>
+						<option value="Telecomunicao">Telecomunicao</option>
+						<option value="Administracao">Administracao</option>
+						<option value="Construcao">Construcao</option>
+						<option value="Saude">Saude</option>
+						<option value="Industrial">Industrial</option>
+						<option value="Multimedia">Multimedia</option>
+						<option value="Seguranca">Seguranca</option>
+						<option value="Outro">Outro</option>
 					</select>
-					<input type="email" name="email" maxlength="120" placeholder="E-mail *" required
+
+					<input type="email" name="email" maxlength="100" placeholder="E-mail *" required
 						class="form-field w-input">
+
 					<input type="password" name="senha" id="senha" maxlength="20" class="form-field w-input"
 						placeholder="Senha *" required>
-						<textarea name="descricao" placeholder="Descrição*"id="text" cols="55" rows="9"></textarea>
-				
-					<input type="text" name="localizacao" maxlength="120" placeholder="Localização *" required
+
+					<textarea name="descricao" placeholder="Descrição*" id="text" cols="50" rows="9"></textarea>
+
+					<input type="text" name="localizacao" maxlength="100" placeholder="Localização *" required
 						class="form-field w-input">
 					<br><br>
 					<input type="submit" value="Crie uma Conta" data-wait="Por favor aguarde..."
@@ -91,7 +94,10 @@
 				<h1>Registre-se como empregador.</h1>
 				<div class="quote">
 					<h2>Teoria e Prática do Comércio</h2>
-					<blockquote><q>Não é o trabalho, mas o saber trabalhar, que é o segredo do êxito no trabalho. Saber trabalhar quer dizer: não fazer um esforço inútil, persistir no esforço até ao fim, e saber reconstruir uma orientação quando se verificou que ela era, ou se tornou, errada.</q></blockquote>
+					<blockquote><q>Não é o trabalho, mas o saber trabalhar, que é o segredo do êxito no trabalho. Saber
+							trabalhar quer dizer: não fazer um esforço inútil, persistir no esforço até ao fim, e saber
+							reconstruir uma orientação quando se verificou que ela era, ou se tornou, errada.</q>
+					</blockquote>
 				</div>
 			</div>
 		</div>
