--- a/HireUP 2.0/web/pages/navbar.html
+++ b/HireUP 2.0/web/pages/navbar.html
@@ -1,37 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-	<meta charset="UTF-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Document</title>
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Document</title>
+    </head>
 
-<body>
-	<div class="navbar">
-		<div class="left-nav">
-			<a href="../index.html" class="brand"><img src="../img/logo.png" alt="Logo" class="logo" height="30" /></a>
-		</div>
+    <body>
+        <div class="navbar">
+            <div class="left-nav">
+                <a href="../index.html" class="brand"><img src="../img/logo.png" alt="Logo" class="logo" height="30" /></a>
+            </div>
 
-			<div class="nav-middle">
-				<nav class="nav-menu">
-        <a href="../index.html" class="nav-link">Home</a>
-        <a href="./empresa.jsp" class="nav-link">Empresas</a>
-        <a href="./browse.jsp" class="nav-link">Pesquise</a>
-        <a href="./subEmpresa.html" class="nav-link">Submeter Empresa</a>
-      </nav>
-			</div>
+            <div class="nav-middle">
+                <nav class="nav-menu">
+                    <a href="../index.html" class="nav-link">Home</a>
+                    <a href="./empresa.jsp" class="nav-link">Empresas</a>
+                    <a href="./browse.jsp" class="nav-link">Pesquise</a>
+                    <a href="./subEmpresa.html" class="nav-link">Submeter Empresa</a>
+                </nav>
+            </div>
 
-		<div>
-			<nav class="right-nav">
-				<a href="./submitJob.jsp" class="nav-link">Poste um Emprego</a>
-				<form action="./login.html">
-					<button class="btn-primary">Log in</button>
-				</form>
-			</nav>
-		</div>
-	</div>
-</body>
+            <div>
+                <nav class="right-nav">
+                    <a href="./submitJob.jsp" class="nav-link">Poste um Emprego</a>
+                    <form action="">
+                        <button style="border:none"><i class="fa-solid fa-user"></i></button>
+                    </form>
+                    <!--<script src="https://kit.fontawesome.com/1f168297b1.js" crossorigin="anonymous"></script>--> 
+                </nav>
+            </div>
+        </div>
+    </body>
 
 </html>
